--- a/StandaloneViewer/testBuild/index.html
+++ b/StandaloneViewer/testBuild/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" class="__meteor-css__" href="7148cf920842e350e98f823d5fbee0d3c5e86d78.css?meteor_css_resource=true">
-        <script type="text/javascript">__meteor_runtime_config__ = JSON.parse(decodeURIComponent("%7B%22meteorRelease%22%3A%22METEOR%401.7.0.3%22%2C%22ROOT_URL_PATH_PREFIX%22%3A%22%22%2C%22meteorEnv%22%3A%7B%22NODE_ENV%22%3A%22production%22%7D%2C%22ROOT_URL%22%3A%22%22%2C%22PUBLIC_SETTINGS%22%3A%7B%22ui%22%3A%7B%22leftSidebarOpen%22%3Atrue%7D%7D%7D"));</script>
-        <script type="text/javascript" src="8d3f5d479026b89272af43c9c7240cf78a8bd1c8.js"></script>
-        <script type="text/javascript">Meteor.disconnect();</script>
+        <script type="text/javascript">__meteor_runtime_config__ = JSON.parse(decodeURIComponent("%7B%22meteorRelease%22%3A%22METEOR%401.7.0.3%22%2C%22ROOT_URL_PATH_PREFIX%22%3A%22%22%2C%22meteorEnv%22%3A%7B%22NODE_ENV%22%3A%22production%22%7D%2C%22ROOT_URL%22%3A%22VIEWER%22%2C%22PUBLIC_SETTINGS%22%3A%7B%22ui%22%3A%7B%22leftSidebarOpen%22%3Atrue%7D%7D%7D"));</script>
+        <script type="text/javascript" src="e4a370cbed8eaf2612f608899468ac7b1e3ae924.js"></script>
+
         <meta charset="utf-8">
     <title>OHIF DICOM Viewer</title>
     <meta name="description" content="OHIF DICOM Viewer">
